--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             </div>
         </div>    
     </main>
-    <footer id="footer">
+    <!-- <footer id="footer">
         <div class="footer__cv">
             <div class="footer__box grid_cont">
                 <button class="box col-md-5 col-lg-5 grid_cont">
@@ -306,7 +306,7 @@
                 </button>
             </div>
         </div>
-    </footer>
+    </footer> -->
     
 </body>
 </html>
