--- a/index.html
+++ b/index.html
@@ -189,6 +189,14 @@
                                     <td><i class="far fa-circle icon"></i></td>
                                 </tr>
                                 <tr>
+                                    <td class="title s__m">Bootstrap</td>
+                                    <td><i class="fas fa-circle icon"></i></td>
+                                    <td><i class="fas fa-circle icon"></i></td>
+                                    <td><i class="fas fa-circle icon"></i></td>
+                                    <td><i class="far fa-circle icon"></i></td>
+                                    <td><i class="far fa-circle icon"></i></td>
+                                </tr>
+                                <tr>
                                     <td class="title s__m">Node.js</td>
                                     <td><i class="fas fa-circle icon"></i></td>
                                     <td><i class="fas fa-circle icon"></i></td>
